fixed element spacing on flex reversed match medals

--- a/react_app/src/Matches.css
+++ b/react_app/src/Matches.css
@@ -211,6 +211,11 @@ p.matchIndex:after {
     margin-left: 0.3rem;
 }
 
+.teamMiddle.redSide .medalContainer + .medalContainer {
+    margin-left: 0;
+    margin-right: 0.3rem;
+}
+
 .medalIcon > svg, .medalIcon {
     width: 1rem;
     height: 1rem;
@@ -223,9 +228,6 @@ p.matchIndex:after {
     font-size: 0.5rem;
     align-self: flex-end;
     margin-left: 0.1rem;
-}
-
-.medalsContainer {
 }
 
 .medalContainer > p:before {
@@ -242,14 +244,6 @@ p.matchIndex:after {
 
 .teamMiddle.blueSide, .teamMiddle.redSide .medalsContainer {
     flex-direction: row-reverse;
-}
-
-.teamMiddle.redSide .medalContainer:before{
-    margin-left: 0;
-}
-
-.teamMiddle.redSide .medalContainer:after{
-    margin-right: 0;
 }
 
 .matchMiddle {
